--- a/index.html
+++ b/index.html
@@ -122,28 +122,28 @@
    <div class="display-menu">
 
      <div class="menu-box ">
-       <img class="menu-img" src="../second project/imges/pexels-nataliya-vaitkevich-8468311.jpg" width="320px" height="260px" >
+       <img class="menu-img" src="imges/pexels-nataliya-vaitkevich-8468311.jpg" width="320px" height="260px" >
         <h2 class="menu-h2">Vanilla Ice Cream</h2>
         <p class="menu-p">second famous flavour in America</p>
         <a  class="menu-a" href="#"><i class="fas fa-chevron-circle-right"></i></a>
      </div><!--//menu-box-->
 
      <div class="menu-box ">
-      <img class="menu-img" src="../second project/imges/pexels-nataliya-vaitkevich-8468320.jpg" width="320px" height="260px">
+      <img class="menu-img" src="imges/pexels-nataliya-vaitkevich-8468320.jpg" width="320px" height="260px">
        <h2 class="menu-h2">Vanilla Ice Cream</h2>
        <p class="menu-p">second famous flavour in America</p>
        <a class="menu-a" href="#"><i class="fas fa-chevron-circle-right"></i></a>
     </div><!--//menu-box-->
 
     <div class="menu-box ">
-      <img class="menu-img" src="../second project/imges/pexels-işıl-agc-14939286.jpg" width="320px" height="260px" >
+      <img class="menu-img" src="imges/pexels-işıl-agc-14939286.jpg" width="320px" height="260px" >
        <h2 class="menu-h2">Vanilla Ice Cream</h2>
        <p class="menu-p">second famous flavour in America</p>
        <a class="menu-a"  href="#"><i class="fas fa-chevron-circle-right"></i></a>
     </div><!--//menu-box-->
 
     <div class="menu-box ">
-      <img class="menu-img" src="../second project/imges/pexels-sylwester-ficek-12861927.jpg" width="320px" height="260px" >
+      <img class="menu-img" src="imges/pexels-sylwester-ficek-12861927.jpg" width="320px" height="260px" >
        <h2 class="menu-h2">Vanilla Ice Cream</h2>
        <p class="menu-p">second famous flavour in America</p>
        <a class="menu-a" href="#"><i class="fas fa-chevron-circle-right"></i></a>
@@ -212,7 +212,7 @@
   <h1 class="chef-h1"> Famous Ice-creem Chefs</h1>
  <div class="display-chef">
   <div class="chef-box">
-    <img class="chef-img" src="../second project/imges/medium-shot-woman-preparing-dessert.jpg">
+    <img class="chef-img" src="imges/medium-shot-woman-preparing-dessert.jpg">
      <h2 class="chef-h2">Monica Reyes</h2>
      <p class="chef-p">England</p>
       <div class="chef-icons">
@@ -223,7 +223,7 @@
   </div> <!--//chef-box//-->
 
   <div class="chef-box">
-    <img class="chef-img" src="../second project/imges/staff-01.jpg">
+    <img class="chef-img" src="imges/staff-01.jpg">
      <h2 class="chef-h2">John Doggett</h2>
      <p class="chef-p">France</p>
      <div class="chef-icons">
@@ -234,7 +234,7 @@
   </div> <!--//chef-box//-->
 
   <div class="chef-box">
-    <img class="chef-img" src="../second project/imges/staff-03.jpg">
+    <img class="chef-img" src="imges/staff-03.jpg">
      <h2 class="chef-h2">Winsome Doggett</h2>
      <p class="chef-p">New York</p>
      <div class="chef-icons">
@@ -245,7 +245,7 @@
   </div><!---//chef-box//--> 
 
   <div class="chef-box">
-    <img class="chef-img" src="../second project/imges/staff-02.jpg">
+    <img class="chef-img" src="imges/staff-02.jpg">
      <h2 class="chef-h2">Wendy Reyes</h2>
      <p class="chef-p">Japan</p>
      <div class="chef-icons">
@@ -265,7 +265,7 @@
 
   <div class="Gallery-card">
    <div class="Front-card">
-     <img class="Gallery-img" src="../second project/imges/pexels-solodsha-8104578.jpg" width="320px" height="260px" >
+     <img class="Gallery-img" src="imges/pexels-solodsha-8104578.jpg" width="320px" height="260px" >
      <div class="back">
      <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
           <div class="list-icons">
@@ -295,7 +295,7 @@
   
     <div class="Gallery-card">
       <div class="Front-card">
-        <img class="Gallery-img" src="../second project/imges/240_F_145785612_SS33kj9VQyu7EVvcAwFD6NKXGOfgp3F8.jpg" width="320px" height="260px" >
+        <img class="Gallery-img" src="imges/240_F_145785612_SS33kj9VQyu7EVvcAwFD6NKXGOfgp3F8.jpg" width="320px" height="260px" >
         <div class="back">
         <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
              <div class="list-icons">
@@ -326,7 +326,7 @@
   
        <div class="Gallery-card">
         <div class="Front-card">
-          <img class="Gallery-img" src="../second project/imges/240_F_81208118_wmB3sAwooAUrHGZza2SpyH2exQ98ssFe.jpg" width="320px" height="260px" >
+          <img class="Gallery-img" src="imges/240_F_81208118_wmB3sAwooAUrHGZza2SpyH2exQ98ssFe.jpg" width="320px" height="260px" >
           <div class="back">
           <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
                <div class="list-icons">
@@ -357,7 +357,7 @@
   
          <div class="Gallery-card">
           <div class="Front-card">
-            <img class="Gallery-img" src="../second project/imges/240_F_79482829_gZSN9PgBY9kvy92U1WkwqhO9dYMIiKME.jpg" width="320px" height="260px" >
+            <img class="Gallery-img" src="imges/240_F_79482829_gZSN9PgBY9kvy92U1WkwqhO9dYMIiKME.jpg" width="320px" height="260px" >
             <div class="back">
             <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
                  <div class="list-icons">
@@ -387,7 +387,7 @@
    
   <div class="Gallery-card">
     <div class="Front-card">
-      <img class="Gallery-img" src="../second project/imges/240_F_278246702_MldsVxnuUNJE7cyQ5QmVTCOm3h9H4oBG.jpg" width="320px" height="260px" >
+      <img class="Gallery-img" src="imges/240_F_278246702_MldsVxnuUNJE7cyQ5QmVTCOm3h9H4oBG.jpg" width="320px" height="260px" >
       <div class="back">
       <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
            <div class="list-icons">
@@ -417,7 +417,7 @@
   
      <div class="Gallery-card">
       <div class="Front-card">
-        <img class="Gallery-img" src="../second project/imges/240_F_153185242_t23gjkDymWRXSR66tfFTOH21JNoui5qR.jpg" width="320px" height="260px" >
+        <img class="Gallery-img" src="imges/240_F_153185242_t23gjkDymWRXSR66tfFTOH21JNoui5qR.jpg" width="320px" height="260px" >
         <div class="back">
         <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
              <div class="list-icons">
@@ -447,7 +447,7 @@
   
        <div class="Gallery-card">
         <div class="Front-card">
-          <img class="Gallery-img" src="../second project/imges/pexels-sylwester-ficek-12861927.jpg" width="320px" height="260px" >
+          <img class="Gallery-img" src="imges/pexels-sylwester-ficek-12861927.jpg" width="320px" height="260px" >
           <div class="back">
           <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
                <div class="list-icons">
@@ -477,7 +477,7 @@
   
          <div class="Gallery-card">
           <div class="Front-card">
-            <img class="Gallery-img" src="../second project/imges/240_F_155493748_KF20ip4qNPqnzqNydyyHX39sStJm9FgJ.jpg" width="320px" height="260px" >
+            <img class="Gallery-img" src="imges/240_F_155493748_KF20ip4qNPqnzqNydyyHX39sStJm9FgJ.jpg" width="320px" height="260px" >
             <div class="back">
             <img src="./imges/tasty-appetizing-pure-vanilla-creamy-ice-cream-with-ice-cream-spoon-closeup-horizontal-with-copy-space_1220-1396.webp" width="320px" height="260px" >
                  <div class="list-icons">
@@ -511,7 +511,7 @@
 
 <div class="footer">
   <div class="last">
-  <img  class="footer-img" src="../second project/imges/5474088-removebg-preview.png">
+  <img  class="footer-img" src="imges/5474088-removebg-preview.png">
   <div class="footer-icons">
       <a href="#"><i class="fab fa-pinterest"></i></a>
       <a href="#"><i class="fa-brands fa-twitter"></i></a>
